- The deprecated :mod:`getopt` module has been dropped in favour of
  :mod:`argparse` in all command line utilities (close :issue:`251`)
- Improved the installation section of the :doc:`../usersguide/index`.

  * instructions for installing PyTables via pip_ have been added.
  * added a reference to the Anaconda_, Canopy_ and `Christoph Gohlke suites`_
    (closes :issue:`291`)


Bugs fixed
----------

- Fixed detection of platforms supporting blosc
- Fixed a crash that occurred when one attempts to write a numpy_ array to
  an :class:`Atom` (closes :issue:`209` and :issue:`296`)
- Prevent creation of a table with no columns (closes :issue:`18` and
  :issue:`299`)
- Fixed a memory leak that occurs when iterating over
  :class:`CArray`/:class:`EArray` objects (closes :issue:`308`,
  see also :issue:`309`).
  Many thanks to Alistair Muldal.

.. _pip: http://www.pip-installer.org
.. _Anaconda: https://store.continuum.io/cshop/anaconda
.. _Canopy: https://www.enthought.com/products/canopy
.. _`Christoph Gohlke suites`: http://www.lfd.uci.edu/~gohlke/pythonlibs


Changes from 2.4 to 3.0
=======================

New features
------------

- Since this release PyTables provides full support to Python_ 3
  (closes :issue:`188`).

- The entire code base is now more compliant with coding style guidelines
  describe in the PEP8_ (closes :issue:`103` and :issue:`224`).
  See `API changes`_ for more details.

- Basic support for HDF5 drivers.  Now it is possible to open/create an
  HDF5 file using one of the SEC2, DIRECT, LOG, WINDOWS, STDIO or CORE
  drivers.  Users can also set the main driver parameters (closes
  :issue:`166`).
  Thanks to Michal Slonina.

- Basic support for in-memory image files.  An HDF5 file can be set from or
  copied into a memory buffer (thanks to Michal Slonina).  This feature is
  only available if PyTables is built against HDF5 1.8.9 or newer.
  Closes :issue:`165` and :issue:`173`.
