@@ -273,7 +273,7 @@ class Group(hdf5extension.Group, Node):
 
     def __del__(self):
         if (self._v_isopen and
-            self._v_pathname in self._v_file._aliveNodes and
+            self._v_pathname in self._v_file._node_manager.registry and
                 '_v_children' in self.__dict__):
             # The group is going to be killed.  Rebuild weak references
             # (that Python cancelled just before calling this method) so
@@ -890,42 +890,40 @@ be ready to see PyTables asking for *lots* of memory and possibly slow I/O."""
         if prefix == '//':
             prefix = '/'
 
-        # Close all loaded nodes.
-        alivenodes = self._v_file._aliveNodes
-        deadnodes = self._v_file._deadNodes
-        revivenode = self._v_file._revivenode
-        # First, close the alive nodes and delete them
-        # so they are not placed in the limbo again.
-        # These two steps ensure tables are closed *before* their indices.
-        closenodes(prefix,
-                   [path for path in alivenodes
-                        if '/_i_' not in path],  # not indices
-                   lambda path: alivenodes[path])
-        # Close everything else (i.e. indices)
-        closenodes(prefix,
-                   [path for path in alivenodes],
-                   lambda path: alivenodes[path])
+        node_manager = self._v_file._node_manager
 
-        # Next, revive the dead nodes, close and delete them
-        # so they are not placed in the limbo again.
+        # First, close cached nodes and delete them from the cache.
         # These two steps ensure tables are closed *before* their indices.
-        closenodes(prefix,
-                   [path for path in deadnodes
-                        if '/_i_' not in path],  # not indices
-                   lambda path: revivenode(path))
+        cachednodes = node_manager.cache
+
+        # Close not indices
+        paths = [path for path in cachednodes if '/_i_' not in path]
+        closenodes(prefix, paths, cachednodes.pop)
+
         # Close everything else (i.e. indices)
-        closenodes(prefix,
-                   [path for path in deadnodes],
-                   lambda path: revivenode(path))
+        closenodes(prefix, list(cachednodes), cachednodes.pop)
+
+        # Next, close and delete nodes in the registry (all nodes that are
+        # still not explicitly closed have a weakref inthe registry).
+        # These two steps ensure tables are closed *before* their indices.
+        registerednodes = node_manager.registry
+
+        # Close not indices
+        paths = [path for path in registerednodes if '/_i_' not in path]
+        closenodes(prefix, paths, registerednodes.pop)
+
+        # Close everything else (i.e. indices)
+        closenodes(prefix, list(registerednodes), registerednodes.pop)
 
     _g_closeDescendents = previous_api(_g_close_descendents)
 
     def _g_close(self):
         """Close this (open) group."""
 
-        # hdf5extension operations:
-        #   Close HDF5 group.
-        self._g_close_group()
+        if self._v_isopen:
+            # hdf5extension operations:
+            #   Close HDF5 group.
+            self._g_close_group()
 
         # Close myself as a node.
         super(Group, self)._f_close()
@@ -1144,7 +1142,7 @@ class RootGroup(Group):
         # Only the root node has the file as a parent.
         # Bypass __setattr__ to avoid the ``Node._v_parent`` property.
         mydict['_v_parent'] = ptfile
-        ptfile._refnode(self, '/')
+        ptfile._node_manager.register_node(self, '/')
 
         # hdf5extension operations (do before setting an AttributeSet):
         #   Update node attributes.
